CCD-3086 Add JDK 17 to BEFTA Framework - README.md updated